# friendly-bassoon

./: .env.example  README.md  package.json  turbo.json
apps/api/: alembic.ini  package.json  pyproject.toml
apps/api/app/: main.py  seed.py
apps/api/app/core/: config.py  deps.py  security.py
apps/api/app/db/: models.py  session.py
apps/api/app/db/migrations/: env.py
apps/api/app/db/migrations/versions/: 0001_initial.py
apps/api/app/middleware/: logging.py
apps/api/app/routers/: __init__.py  auth.py  content.py  offers.py
apps/api/app/schemas/: auth.py  content.py  offers.py
apps/api/app/services/: content_service.py  offer_service.py
apps/api/app/services/ai/: base.py  registry.py
apps/api/app/services/ai/prompts/: content.py  offer.py
apps/api/app/services/ai/providers/: anthropic.py  mock.py  openai.py
apps/web/: middleware.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: layout.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/generate/: page.tsx
apps/web/app/history/: page.tsx
apps/web/app/history/[id]/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/offer-builder/: page.tsx
apps/web/app/register/: page.tsx
apps/web/components/: auth-form.tsx
apps/web/lib/: api.ts
infra/docker/: Dockerfile.api  Dockerfile.web  docker-compose.yml
